fixed some card placement issues

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -8,14 +8,13 @@
     <script src="js/sockets.js"></script>
 </head>
 <!--header setup above-->
-<body onload="setupSocket(); setupAddCardBtn();">
+<body onload="setupHome();">
 <!--Loads the socket and card button-->
 <section class="board-layout">
     <div class="left">
         <div class="board-text">Message Board</div>
     </div>
     <div class="cards-container">
-        <button id="add-card-btn" >Add a card</button>
     </div>
 </section>
 </body>
