Added toJSON() functions to classes. Changed some things in an effort to make the board load on startup.

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Message Board</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" defer></script>
-    <script src="js/sockets.js"></script>
+    <script defer src="js/main.js"></script>
+    <script defer src="js/sockets.js"></script>
 </head>
 <!--header setup above-->
 <body onload="setupHome();">
